# arena9.github.io

./: .env.example  .gitignore  ADDIM_ADDIM_POSTGRESQL.md  DEPLOYMENT.md  DEPLOY_AZƏRBAYCAN.md  FIX_DB.bat  GITHUB_DEPLOYMENT_GUIDE.md  MƏLUMAT_QORUNMASI.md  POSTGRESQL_QURAŞDIRMA.md  POSTGRESQL_TƏZ.md  POSTGRESQL_İNFOQRAFİK.md  QUICK_START.md  README.md  README_AZ.md  README_MIGRATIONS.md  RENDER_POSTGRESQL_YENI.md  SERVER_ERROR_FIX.md  TEST_IZLEYICI.md  TƏCİLİ_TEST.md  TƏHLÜKƏSİZLİK_DÜZƏLİŞLƏRİ.md  TƏZ_BAŞLAMA.md  YENİ_FUNKSİYALAR.md  _admin_logs_route.txt  add_lineups_column.py  alembic.ini  app.py  app_old.py  apply_schema_updates.py  check_teams.py  create_audit_table.py  fix_db_schema.py  fix_match_data.py  init_db.py  init_new_tables.py  list_tables.py  migrate_db.py  migrate_missing_columns.py  package-lock.json  package.json  pyproject.toml  (+7 more)
alembic/: env.py  script.py.mako
static/css/: animations.css  pitch.css  player-card.css  premium.css  theme.css
static/js/: charts.js  premium.js
templates/: admin.html  admin_add_match.html  admin_add_match_new.html  admin_add_player.html  admin_edit_match.html  admin_edit_player.html  admin_logs.html  base.html  dashboard.html  dream_team.html  index.html  leaderboard.html  login.html  match_detail.html  matches.html  matches_list.html  player_compare.html  player_edit_full.html  player_profile.html  player_profile_new.html  player_vs.html  players.html  players_new.html  register.html  spa.html  teams.html  welcome.html
