[project]
name = "arena9-github-io"
version = "0.1.0"
description = "Arena9 Football League Stats Management"
requires-python = "==3.12.*"
dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Migrate>=4.0.5",
    "SQLAlchemy>=2.0.23",
    "Pillow>=10.1.0",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
]

[tool.uv]
managed = true
package = false
